--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
             <input type="password" id="password" name="password" required>
         </div>
         <div class="login-btn-container">
-            <a href="/member/register" class="register-btn">Register</a>
+            <a href="/member/save" class="register-btn">Register</a>
             <button type="submit" class="submit-btn">Login</button>
         </div>
     </form>
