--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,27 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--    <link th:href="@{/css/main.css?after}" rel="stylesheet">-->
+    <!--    <link th:href="@{/css/main.css?after}" rel="stylesheet">-->
     <link href="css/main.css" rel="stylesheet">
     <title>Login Page</title>
 </head>
 <body>
 <div class="container">
     <h2>Login</h2>
-    <form class="form">
+    <form class="form" action="/member/login" method="post">
         <div class="form-group">
-            <label for="username">ID:</label>
-            <input type="text" id="username" name="username" required>
+            <label for="id">ID:</label>
+            <input type="text" id="id" name="memberId" required>
         </div>
         <div class="form-group">
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" id="password" name="memberPassword" required>
         </div>
-        <div class="login-btn-container">
-            <a href="/member/save" class="register-btn">Register</a>
-            <button type="submit" class="submit-btn">Login</button>
-        </div>
+        <input type="submit" class="login-btn-container" value="Login">
     </form>
+    <a href="/member/save" class="register-btn">Register</a>
 </div>
 </body>
 </html>
